--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.8.0",
-    "workbox-webpack-plugin": "^6.2.4",
-    "worker-plugin": "^5.0.1"
+    "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
     "@fontsource/noto-sans": "^4.5.1",
@@ -67,6 +66,7 @@
     "blurhash": "^1.1.4",
     "classlist.js": "https://github.com/eligrey/classList.js/archive/1.2.20180112.tar.gz",
     "classnames": "^2.3.1",
+    "comlink": "^4.3.1",
     "core-js": "^3.19.0",
     "date-fns": "^2.25.0",
     "dompurify": "^2.3.3",
